<resources>
    <string name="AGO_TIME">Luanda</string>
    <string name="ARE_TIME">Dubai</string>
    <string name="ARM_TIME">Yerevan</string>
    <string name="AUS_TIME">Sydney</string>
    <string name="AUT_TIME">Vienna</string>
    <string name="AZE_TIME">Baku</string>
    <string name="Adelaide_SA">SA</string>
    <string name="BEL_TIME">Brussels</string>
    <string name="BGD_TIME">Dhaka</string>
    <string name="BGR_TIME">Sofia</string>
    <string name="BHR_TIME">Bahrain</string>
    <string name="BRN_TIME">Brunei</string>
    <string name="Brisbane_QLD">QLD</string>
    <string name="CHE_TIME">Zurich</string>
    <string name="CIV_TIME">Abidjan</string>
    <string name="CMR_TIME">Douala</string>
    <string name="COD_TIME">Lubumbashi</string>
    <string name="COG_TIME">Brazzaville</string>
    <string name="CZE_TIME">Prague</string>
    <string name="Canary_Islands_time">Canary Islands</string>
    <string name="DEU_TIME">Berlin</string>
    <string name="DNK_TIME">Copenhagen</string>
    <string name="DZA_TIME">Algiers</string>
    <string name="Darwin_NT">NT</string>
    <string name="EGY_TIME">Cairo</string>
    <string name="ESP_TIME">Madrid</string>
    <string name="EST_TIME">Tallinn</string>
    <string name="ETH_TIME">Addis_Ababa</string>
    <string name="FIN_TIME">Helsinki</string>
    <string name="FJI_TIME">Fiji</string>
    <string name="FRA_TIME">Paris</string>
    <string name="GAB_TIME">Libreville</string>
    <string name="GBR_TIME">London</string>
    <string name="GEO_TIME">Tbilisi</string>
    <string name="GHA_TIME">Accra</string>
    <string name="GIN_TIME">Conakry</string>
    <string name="GRC_TIME">Athens</string>
    <string name="HRV_TIME">Zagreb</string>
    <string name="HUN_TIME">Budapest</string>
    <string name="Hobart_TAS">TAS</string>
    <string name="IDN_TIME">Jakarta</string>
    <string name="IND_TIME">Kolkata</string>
    <string name="IRL_TIME">Dublin</string>
    <string name="IRQ_TIME">Baghdad</string>
    <string name="ISR_TIME">Jerusalem</string>
    <string name="ITA_TIME">Rome</string>
    <string name="JOR_TIME">Amman</string>
    <string name="KAZ_TIME">Almaty</string>
    <string name="KEN_TIME">Nairobi</string>
    <string name="KGZ_TIME">Bishkek</string>
    <string name="KHM_TIME">Phnom_Penh</string>
    <string name="KWT_TIME">Kuwait</string>
    <string name="LAO_TIME">Vientiane</string>
    <string name="LBN_TIME">Beirut</string>
    <string name="LBR_TIME">Monrovia</string>
    <string name="LBY_TIME">Tripoli</string>
    <string name="LKA_TIME">Colombo</string>
    <string name="LUX_TIME">Luxembourg</string>
    <string name="MAR_TIME">Casablanca</string>
    <string name="MDV_TIME">Maldives</string>
    <string name="MKD_TIME">Skopje</string>
    <string name="MLI_TIME">Bamako</string>
    <string name="MMR_TIME">Rangoon</string>
    <string name="MNG_TIME">Ulaanbaatar</string>
    <string name="about_build">Build</string>
    <string name="about_legal_info">Legal information</string>
    <string name="about_model">Model</string>
    <string name="about_preference">About</string>
    <string name="about_serial">Serial number</string>
    <string name="about_system_update">System update</string>
    <string name="about_version">Version</string>
    <string name="accessibility_captions">Captions</string>
    <string name="accessibility_captions_fusion">Captions (Antenna/Cable)</string>
    <string name="additional_system_update" />
    <string name="additional_system_update_menu" />
    <string name="additional_system_update_settings_list_item_title">Additional system updates</string>
    <string name="baseband_version">Baseband version</string>
    <string name="battery_level_title">Battery level</string>
    <string name="battery_status_title">Battery status</string>
    <string name="captions_advanced_selection">Advanced Selection</string>
    <string name="captions_background_color">Background Color</string>
    <string name="captions_background_opacity">Background Opacity</string>
    <string name="captions_captionstyle">Caption style</string>
    <string name="captions_display">Display</string>
    <string name="captions_edge_color">Edge Color</string>
    <string name="captions_edge_type">Edge Type</string>
    <string name="captions_font_family">Font Family</string>
    <string name="captions_font_opacity">Text Opacity</string>
    <string name="captions_language">Language</string>
    <string name="captions_service">Caption Services</string>
    <string name="captions_style_0">White on black</string>
    <string name="captions_style_1">Black on white</string>
    <string name="captions_style_2">Yellow on black</string>
    <string name="captions_style_3">Yellow on blue</string>
    <string name="captions_style_custom">Custom</string>
    <string name="captions_text_color">Text Color</string>
    <string name="captions_textsize">Text size</string>
    <string name="connected">Connected</string>
    <string name="connectivity_ethernet">Ethernet</string>
    <string name="connectivity_network_category_title">Network &amp; internet</string>
    <string name="device_daydream">Screen saver</string>
    <string name="device_feedback">Send feedback about this device</string>
    <string name="device_info_default">Unknown</string>
    <string name="device_name">Device name</string>
    <string name="device_picture">Picture</string>
    <string name="device_power">Power</string>
    <string name="device_pref_category_title">Device Preferences</string>
    <string name="device_reset">Reset</string>
    <string name="device_sound">Sound</string>
    <string name="device_status">Status</string>
    <string name="device_status_summary">Network, serial numbers and other information</string>
    <string name="device_status_title">Status</string>
    <string name="device_storage">Storage</string>
    <string name="display_options">Display options</string>
    <string name="fcc_equipment_id">Equipment ID</string>
    <string name="imei_information_title">IMEI information</string>
    <string name="ims_reg_title">IMS registration state</string>
    <string name="inputs_device_auto_off">Device auto power off</string>
    <string name="inputs_device_auto_off_desc">Power off HDMI devices with the TV</string>
    <string name="inputs_hdmi_control">HDMI control</string>
    <string name="inputs_hdmi_control_desc">Allow the TV to control HDMI devices</string>
    <string name="inputs_header_cec">Consumer Electronic Control (CEC)</string>
    <string name="inputs_inputs">Inputs</string>
    <string name="inputs_tv_auto_on">TV auto power on</string>
    <string name="inputs_tv_auto_on_desc">Power on the TV with HDMI device</string>
    <string name="kernel_version">Kernel version</string>
    <string name="manual">Manual</string>
    <string name="not_connected">Not connected</string>
    <string name="production_name">Production Name</string>
    <string name="regulatory_information">Regulatory information</string>
    <string name="restart_button_label">Restart</string>
    <string name="restricted_profile_change_password_title">Change pin</string>
    <string name="restricted_profile_configure_apps_title">Allowed apps</string>
    <string name="restricted_profile_create_title">Create restricted profile</string>
    <string name="restricted_profile_delete_title">Delete restricted profile</string>
    <string name="restricted_profile_switch_out">Exit restricted profile</string>
    <string name="restricted_profile_switch_to">Enter restricted profile</string>
    <string name="s_netflix_esn">Netflix ESN</string>
    <string name="s_retail_mode">Retail Mode</string>
    <string name="s_software_version">Software Version</string>
    <string name="security_patch">Android security patch level</string>
    <string name="security_unknown_sources_desc">Allow installation of apps from sources other than the Play Store</string>
    <string name="security_unknown_sources_title">Unknown sources</string>
    <string name="security_verify_apps_desc">Disallow or warn before installation of apps that may cause harm</string>
    <string name="security_verify_apps_title">Verify apps</string>
    <string name="selinux_status">SELinux status</string>
    <string name="selinux_status_enforcing">Enforcing</string>
    <string name="sim_status_title">SIM status</string>
    <string name="status_bt_address">Bluetooth address</string>
    <string name="status_unavailable">Unavailable</string>
    <string name="status_up_time">Up time</string>
    <string name="storage_apps_usage">Apps</string>
    <string name="storage_available">Available</string>
    <string name="storage_dcim_usage">Photos &amp; videos</string>
    <string name="storage_downloads_usage">Downloads</string>
    <string name="storage_eject">Eject</string>
    <string name="storage_format">Erase &amp; format</string>
    <string name="storage_media_cache_usage">Cached data</string>
    <string name="storage_media_misc_usage">Misc.</string>
    <string name="storage_migrate">Migrate data to this storage</string>
    <string name="storage_music_usage">Audio</string>
    <string name="system_accessibility">Accessibility</string>
    <string name="system_accessibility_tts_engine_config">Engine configuration</string>
    <string name="system_cast">Google Cast</string>
    <string name="system_date_time">Date &amp; time</string>
    <string name="system_developer_options">Developer options</string>
    <string name="system_diagnostic">Usage &amp; diagnostics</string>
    <string name="system_google">Google</string>
    <string name="system_home">Home screen</string>
    <string name="system_inputs">Inputs</string>
    <string name="system_keyboard">Keyboard</string>
    <string name="system_language">Language</string>
    <string name="system_location">Location</string>
    <string name="system_security">Security &amp; restrictions</string>
    <string name="system_timer">Timer</string>
    <string name="title_internet_connection">Internet connection</string>
    <string name="title_ip_address">IP address</string>
    <string name="title_mac_address">MAC address</string>
    <string name="title_signal_strength">Signal strength</string>
    <string name="title_wifi_ip_settings">IP settings</string>
    <string name="title_wifi_proxy_settings">Proxy settings</string>
    <string name="tts_default_rate_summary">Speed at which the text is spoken</string>
    <string name="tts_default_rate_title">Speech rate</string>
    <string name="tts_engine_preference_section_title">Preferred engine</string>
    <string name="tts_general_section_title">General</string>
    <string name="tts_play_example_summary">Play a short demonstration of speech synthesis</string>
    <string name="tts_play_example_title">Listen to an example</string>
    <string name="tts_settings_title">Text-to-speech output</string>
    <string name="tts_status_title">Default language status</string>
    <string name="tutorials">Tutorials</string>
    <string name="user_new_profile_name">Restricted Profile</string>
    <string name="wifi_forget_network">Forget network</string>
    <string name="wifi_setting_always_scan">Scanning always available</string>
    <string name="wifi_setting_always_scan_context">Let Google\'s location service and other apps scan for networks, even when Wi-Fi is off</string>
    <string name="wifi_setting_available_networks">Available networks</string>
    <string name="wifi_setting_enable_wifi">Wi-Fi</string>
    <string name="wifi_setting_header_other_options">Other options</string>
    <string name="wifi_setting_other_options_add_network">Add new network</string>
    <string name="wifi_setting_see_all">See all</string>
    <string name="wifi_setting_wol">Wol</string>
    <string name="wifi_setting_wol_context">wake on LAN</string>
    <string name="wifi_setting_wow">Wow</string>
    <string name="wifi_setting_wow_context">wake on wireless network</string>
</resources>