<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:settings="http://schemas.android.com/apk/res/com.android.tv.settings" android:title="@string/about_preference">
    <Preference android:title="@string/tutorials" android:key="tutorials">
        <intent android:action="com.google.android.tvtutorials.action.FEATURE_TUTORIALS_TOUR"/>
    </Preference>
    <Preference android:title="@string/about_system_update" android:key="system_update_settings">
        <intent android:action="android.settings.SYSTEM_UPDATE_SETTINGS"/>
    </Preference>
    <Preference android:title="@string/additional_system_update_settings_list_item_title" android:key="additional_system_update_settings">
        <intent android:targetPackage="@string/additional_system_update" android:action="android.intent.action.MAIN" android:targetClass="@string/additional_system_update_menu"/>
    </Preference>
    <Preference android:title="@string/device_name" android:key="device_name">
        <intent android:action="android.settings.DEVICE_NAME"/>
    </Preference>
    <Preference android:title="@string/production_name" android:key="production_name"/>
    <com.android.tv.settings.LongClickPreference android:title="@string/restart_button_label" android:key="restart" android:fragment="com.android.tv.settings.about.RebootConfirmFragment"/>
    <Preference android:title="@string/device_status" android:key="status_info" android:summary="@string/device_status_summary">
        <intent android:targetPackage="com.android.tv.settings" android:action="android.intent.action.MAIN" android:targetClass="com.android.tv.settings.about.StatusActivity"/>
    </Preference>
    <Preference android:title="@string/manual" android:key="manual">
        <intent android:action="android.settings.SHOW_MANUAL"/>
    </Preference>
    <Preference android:title="@string/about_legal_info" android:key="container" android:fragment="com.android.tv.settings.about.LegalFragment"/>
    <Preference android:title="@string/regulatory_information" android:key="regulatory_info">
        <intent android:action="android.settings.SHOW_REGULATORY_INFO"/>
    </Preference>
    <Preference android:title="@string/device_feedback" android:key="device_feedback"/>
    <Preference android:title="@string/about_model" android:key="device_model" android:summary="@string/device_info_default"/>
    <Preference android:title="@string/about_version" android:key="firmware_version" android:summary="@string/device_info_default"/>
    <Preference android:title="@string/s_software_version" android:key="software_version"/>
    <Preference android:title="@string/s_netflix_esn" android:key="netflix_esn_key"/>
    <Preference android:title="@string/security_patch" android:key="security_patch" android:summary="@string/device_info_default"/>
    <Preference android:title="@string/fcc_equipment_id" android:key="fcc_equipment_id" android:summary="@string/device_info_default"/>
    <Preference android:title="@string/baseband_version" android:key="baseband_version" android:summary="@string/device_info_default"/>
    <Preference android:title="@string/kernel_version" android:key="kernel_version" android:summary="@string/device_info_default"/>
    <Preference android:title="@string/about_build" android:key="build_number" android:summary="@string/device_info_default"/>
    <Preference android:title="@string/selinux_status" android:key="selinux_status" android:summary="@string/selinux_status_enforcing"/>
</PreferenceScreen>
