<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:settings="http://schemas.android.com/apk/res/com.android.tv.settings" android:title="@string/tts_settings_title">
    <PreferenceCategory android:title="@string/tts_engine_preference_section_title" android:key="tts_engine_preference_section"/>
    <Preference android:title="@string/system_accessibility_tts_engine_config" android:key="tts_engine_settings" android:fragment="com.android.tv.settings.system.TtsEngineSettingsFragment"/>
    <PreferenceCategory android:title="@string/tts_general_section_title" android:key="tts_general_section">
        <ListPreference android:persistent="true" android:entries="@array/tts_rate_entries" android:title="@string/tts_default_rate_title" android:key="tts_default_rate" android:summary="@string/tts_default_rate_summary" android:entryValues="@array/tts_rate_values"/>
    </PreferenceCategory>
    <Preference android:persistent="true" android:title="@string/tts_play_example_title" android:key="tts_play_example" android:summary="@string/tts_play_example_summary"/>
    <Preference android:persistent="true" android:enabled="false" android:title="@string/tts_status_title" android:key="tts_status" android:shouldDisableView="false"/>
</PreferenceScreen>
